--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,25 +1,26 @@
 \section{Concluding Remarks}
 \label{sec:conclusion}
 
-We have presented a formalisation of \LCC, a variant of the linear
-$\pi$-calculus~\cite{KobayashiPierceTurner99} supported by the same type system
-of \CP~\cite{Wadler14}. Binary sessions are modeled in \LCC using the
-continuation-passing encoding described by \citet[extended
-version]{Kobayashi02b} and \citet{DardhaGiachinoSangiorgi17}.
+We have presented a formalisation of \LCC, a linear calculus of continuations
+closely related to the linear $\pi$-calculus~\cite{KobayashiPierceTurner99} and
+supported by the same type system of \CP~\cite{Wadler14}. Binary sessions can be
+modeled in \LCC using the continuation-passing encoding described by
+\citet[extended version]{Kobayashi02b} and \citet{DardhaGiachinoSangiorgi17}.
 %
 Under the assumption that the size of a formalisation is a good measure of its
-complexity, the formalisation of \LCC can be qualified as ``simple'' compared to
-the existing ones.
-%
-In this respect, our work casts some doubts on the actual contribution of
-context splitting to the complexity of a formalisation and hints instead at
-explicit continuations in the underlying model as a simplifying factor.
-%
-It is quite striking that, among the approaches that have been proposed to
-overcome context splitting, the one of \citet{SanoKavanaghPientka23} makes use
-of explicit continuations.
+complexity, the formalisation of \LCC qualifies as the simplest compared to the
+existing ones. This result should also be weighed considering the richness of
+\LCC in terms of supported features and provable properties.
 
-We remark that \LCC and the calculus described in the linearity
+Our work casts some doubts on the actual contribution of context splitting to
+the complexity of a formalisation and hints instead at explicit continuations in
+the underlying model as a simplifying factor.
+%
+It is quite remarkable that, among the alternative approaches that have been
+proposed to avoid context splitting, the one of \citet{SanoKavanaghPientka23}
+based on linearity predicates makes use of explicit continuations.
+
+The calculus of linear continuations and the calculus described in the linearity
 challenge~\cite{CarboneEtAl24} are incomparable in terms of expressiveness. On
 the one hand, the challenge only considers a minimal calculus of first-order,
 monomorphic sessions while \LCC is a fully-fledged calculus that supports
@@ -29,16 +30,16 @@ sequential processes that own both endpoints of a session. These processes can
 be modeled in the calculus of the challenge, where parallel composition and name
 restriction are distinct constructs as in the $\pi$-calculus.
 %
-Because of its logical foundations, we like to think of \LCC as a ``canonical''
-calculus that deserves its own space in the context of the linearity challenge
-alongside with (but not in substitution of) more traditional session calculi.
+Because of its logical foundations, we think that \LCC deserves its own space in
+the context of the linearity challenge alongside with (but not in substitution
+of) more traditional session calculi.
 
-The simple formalisation of \LCC is a good basis for further investigations. We
-have already extended \LCC with support for infinite types and recursive
-processes (the source code of this extension is publicly available in the same
-repository as the one that contains the formalisation of \LCC). In the future,
-it would be interesting to formalise the strong normalisation property of \LCC
-as a consequence of cut elimination of classical linear logic.
+The simple formalisation of \LCC is a good starting point for further
+developments. We have already extended \LCC with support for infinite types and
+recursive processes (the source code of this extension is publicly available in
+the same repository as the one that contains the formalisation of \LCC). In the
+future, it would be interesting to formalise the strong normalisation property
+of \LCC as a consequence of cut elimination of classical linear logic.
 
 In this work we have focused on models and theories of \emph{binary sessions}
 (those connecting exactly two processes), but there are also formalisations of
@@ -49,4 +50,4 @@ amounts to 173kb and the one by \citet{TiroreBengstonCarbone25} to more than 1Mb
 of Coq code. Also in these cases, the formalisation based on (virtual)
 continuations~\citep{JacobsBalzerKrebbers22a} happens to be substantially
 smaller. Whether this is a coincidence or further evidence of the effectiveness
-of the continuation-based approaches is left for future work.
+of the continuation-based approaches is left as future work.
