--- a/paper/Examples.lagda.tex
+++ b/paper/Examples.lagda.tex
@@ -108,7 +108,8 @@ ServerT = `! (`∀ (rav (# 0) ⅋ (var (# 0) ⊗ 𝟙)))
 \end{code}
 
 The notation $\AgdaFunction{\#}~n$ is defined in Agda's standard library and
-creates an element of \AgdaDatatype{Fin} from the natural number $n$.
+creates an element of \AgdaDatatype{Fin} from the natural number $n$. Here it is
+used to create the de Bruijn index of the type variable $X$.
 %
 We now encode the server
 \begin{code}
@@ -130,7 +131,7 @@ Client = curry∗ client ch (< ≫) $
          curry∗ link ch (< > •) ch
 \end{code}
 
-We define a main process that connects server and client
+To test our definitions we compose client and server in parallel
 \begin{code}
 Main : Proc [ 𝔹 ]
 Main = curry∗ cut Client (< •) Server
