--- a/paper/Safety.lagda.tex
+++ b/paper/Safety.lagda.tex
@@ -60,8 +60,9 @@ WellFormed {Γ} P = ∀{Δ} {𝒞 : ReductionContext Δ Γ} {Q : Proc Δ} →
 \end{code}
 
 The proof of type safety ends up being a trivial application of
-\AgdaFunction{deadlock-freedom}, since the process $Q$ in the hole of a
-reduction context is well typed by construction.
+\AgdaFunction{deadlock-freedom}. No work is needed to deduce that the process
+$Q$ in the hole of a reduction context is well typed because structural
+pre-congruence preserves typing by definition.
 
 \begin{code}
 type-safety : ∀{Γ} (P : Proc Γ) → WellFormed P
