--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -260,6 +260,7 @@
 \newcommand{\Tag}[1][a]{\mathsf{\color{teal}#1}}
 
 \newcommand{\wtp}[3][]{#2 \vdash\ifblank{#1}{}{^{\color{purple}#1}} #3}
+\newcommand{\wtl}[3]{#2 \vdash #1 \vartriangleright #3}
 
 \newcommand{\CallRule}{\rulename{call}}
 \newcommand{\LinkRule}{\rulename{link}}
