--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -1,11 +1,11 @@
 \abstract{%
-    The formalisation of session calculi is considered challenging due to the
-    management of channels, which are linear resources that cannot be discarded
-    or duplicated at will and whose type changes over time, as input/output
+    The formalisation of session calculi is considered challenging because of
+    the management of channels, which are linear resources that cannot be
+    discarded or duplicated and whose type changes over time, as input/output
     operations are performed on them.
     %
     Context splitting, the ``naive'' channel management technique directly
-    related to the way session type theories are usually sketched with pen and
+    related to the way session type theories are usually written with pen and
     paper, is often considered a hindrance and a notable source of complexity,
     to the point that several alternative approaches have been recently
     proposed.
